--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,6 +6,9 @@
 #    org.morshed: DEBUG
 
 spring:
+  redis:
+    host: localhost
+    port:6379
   devtools:
     restart:
       enabled: true
@@ -15,3 +18,4 @@ spring:
 
 application:
   name: server1
+
