--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
 			<version>1.15.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>it.ozimov</groupId>
+			<artifactId>embedded-redis</artifactId>
+			<version>0.7.2</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
