Eureka client integrated

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,4 +18,14 @@ spring:
 
 application:
   name: server1
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: false
+  instance:
+    instance-id: keyvaluestore
+    hostname: localhost
+    appname: keyvaluestore
+    virtual-host-name: keyvaluestore
+
 
